[package]
name = "webcryptobox"
description = "Convenient wrappers around OpenSSL to use WebCrypto compatible cryptography."
version = "1.0.4"
edition = "2021"
documentation = "https://docs.rs/webcryptobox/latest/webcryptobox/"
homepage = "https://github.com/jo/webcryptobox-rs"
repository = "https://github.com/jo/webcryptobox-rs"
readme = "README.md"
license = "Apache-2.0"
authors = ["Johannes J. Schmidt <schmidt@pm.me>"]
keywords = ["WebCrypto", "crypto", "ec", "aes"]


[dependencies]
openssl = "0.10.38"
hex = "0.4.3"
base64 = "0.13.0"
